--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "start": "node src/server.js"
   },
   "dependencies": {
+    "@sendinblue/client": "^3.3.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mysql2": "^3.15.3",
-    "nodemailer": "^7.0.10"
+    "nodemailer": "^7.0.10",
+    "resend": "^6.2.2"
   }
 }
